--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ npm-debug.log
 node_modules
 builds
 package-lock.json
-public
-resources
+public/*
+resources/*
 .hugo_build.lock
 jsconfig.json
 hugo_stats.json
